# flake-pilot

./: .bumpversion.cfg  Cargo.toml  LICENSE  Makefile  README.md  flakes.yml
.github/workflows/: ci-clippy.yml  ci-compile.yml  ci-robot-tests.yml  ci-sbom.yml  ci-units.yml
appstore/firecracker/: claude.x86_64-1.15.6-0.tar.xz
appstore/firecracker/claude/: appliance.kiwi  claude.sh  config.sh
appstore/firecracker/claude/root/etc/dracut.conf.d/: overlay.conf  virtio.conf  vsock.conf
appstore/firecracker/claude/root/etc/systemd/: timesyncd.conf
appstore/firecracker/claude/root/root/.ssh/: authorized_keys
appstore/podman/gcloud/: release
appstore/podman/gemini/: appliance.kiwi
common/: Cargo.toml
common/src/: command.rs  config.rs  container.rs  defaults.rs  error.rs  flakelog.rs  io.rs  lib.rs  lookup.rs  user.rs
completion/: flake-ctl
doc/: firecracker-pilot.rst  flake-ctl-firecracker-pull.rst  flake-ctl-firecracker-register.rst  flake-ctl-firecracker-remove.rst  flake-ctl-list.rst  flake-ctl-podman-build-deb.rst  flake-ctl-podman-load.rst  flake-ctl-podman-pull.rst  flake-ctl-podman-register.rst  flake-ctl-podman-remove.rst  flake-ctl.rst  flake-pilot.rst  podman-pilot.rst  sci.rst
firecracker-pilot/: Cargo.toml
firecracker-pilot/firecracker-service/service/: Cargo.toml
firecracker-pilot/firecracker-service/service-communication/: Cargo.toml
firecracker-pilot/guestvm-tools/sci/: Cargo.toml
firecracker-pilot/guestvm-tools/sci/src/: defaults.rs  main.rs
firecracker-pilot/src/: app_path.rs  config.rs  defaults.rs  firecracker.rs  main.rs  tests.rs
flake-ctl/: Cargo.toml
flake-ctl/debbuild/: container.spec.in  oci-deb
flake-ctl/src/: app.rs  app_config.rs  cli.rs  deb.rs  defaults.rs  fetch.rs  firecracker.rs  main.rs  podman.rs
flake-ctl/template/: container-flake.yaml  firecracker-flake.yaml
images/: transparency.drawio
package/: flake-pilot.spec  gcc_fix_static.sh
podman-pilot/: Cargo.toml
podman-pilot/registry/: storage.conf
podman-pilot/src/: app_path.rs  config.rs  defaults.rs  main.rs  podman.rs  tests.rs
robot_tests/common/: ctl.robot
robot_tests/ctl/: podman.robot
utils/: flake-registry
