[package]
name = "flakes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4" }
thiserror = { version = "1.0" }

[features]
json = ["serde_json"]
