[package]
name = "flakes"
version = "3.0.4"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4" }
thiserror = { version = "1.0" }
serde_yaml = { version = "0.9" }
lazy_static = { version = "1.4" }

[features]
json = ["serde_json"]
