[package]
name = "flakes"
version = "3.1.19"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4" }
thiserror = { version = "1.0" }
serde_yaml = { version = "0.9" }
lazy_static = { version = "1.4" }
uzers = { version = "0.12" }
rust-ini = { version = "0.21" }
tempfile = { version = "3.4" }

[features]
json = ["serde_json"]
