[package]
name = "firecracker-pilot"
version = "3.0.14"
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
which = { version = "4.2" }
yaml-rust = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.9" }
tempfile = { version = "3.4" }
spinoff = { version = "0.7" }
ubyte = { version = "0.10", features = ["serde"] }
lazy_static = { version = "1.4" }
serde_yaml = { version = "0.9" }
strum = { version = "0.25", features = ["derive"] }
flakes = { version = "3.0.14 ", path = "../common", features = ["json"] }
libc = { version = "0.2" }
