[package]
name = "flake-ctl"
version = "3.0.4"
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
claim = { version = "0.3" }
log = { version = "0.4" }
env_logger = { version = "0.9" }
glob = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = { version = "0.3" }
indicatif = { version = "0.15" }
tokio = { version = "1.32", features = ["full"] }
tempfile = { version = "3.4" }
