[package]
name = "sci"
version = "3.1.13"
edition = "2018"
license = "MIT"

[dependencies]
env_logger = { version = "0.10" }
log = { version = "0.4" }
sys-mount = { version = "2.0", default-features = false, features = [] }
system_shutdown = { version = "4.0" }
shell-words = { version = "1.1" }
vsock = { version = "0.3" }
libc = { version = "0.2" }
pty = { version = "0.2" }
termios = { version = "0.3" }
